--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                                 <a class="image-link" href="https://quizzical-hypatia-98a9d6.netlify.app/"><i class="fa fa-search-plus"></i></a>
                                 <!-- <a href="https://google.com" target="_blank"><i class="fa fa-link"></i></a> -->
                             </div>
-                            <img src="img/black.png" href="" alt="image" >
+                            <img src="img/Acquisisci schermata Web_24-4-2021_141616_quizzical-hypatia-98a9d6.netlify.app.jpeg" href="" alt="image" >
                             <div class="portfolio-info" >
                                 <h3>Chainkoin</h3>
                             </div>
