--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
                     <div class="col-md-12">
                         <div class="col-md-10 col-md-offset-1 text-center wp3">
                             <h2>Experience</h2>
-                            <p>I've been doing web development for about 1 years now, and I'm always eager to learn more.</p>
+                            <p>I've been doing web development for about 1 years now, Some technologies I've worked with:.</p>
                         </div>
                         
-                        <div class="col-sm-offset-1 col-xs-12 col-sm-6 col-md-6 skills-section wp3">
-                            <h3 id="sometech">Some technologies I've worked with:</h3>
+                        <div class="col-sm-offset-1 col-xs-12 col-sm-6 col-md-10 skills-section">
+                           
                             <div class="row" id="lol">
                                 <div class="col-xs-3 col-sm-2 col-md-2 skill-icon"><img class="img-responsive" src="img/skills/html.png" id="html"></div>
                                 <div class="col-xs-3 col-sm-2 col-md-2 skill-icon"><img class="img-responsive" src="img/skills/css.png" id="css"></div>
@@ -146,6 +146,8 @@
                                 <div class="col-xs-3 col-sm-2 col-md-2 skill-icon"><img class="img-responsive" src="img/skills/node.png" id="node"></div>
                                 <div class="col-xs-3 col-sm-2 col-md-2 skill-icon"><img class="img-responsive" src="img/skills/github.png"></div>
                                 <div class="col-xs-3 col-sm-2 col-md-2 skill-icon"><img class="img-responsive" src="img/skills/spring.png"></div>
+                                <div class="col-xs-3 col-sm-2 col-md-2 skill-icon"><img class="img-responsive" src="img/skills/68747470733a2f2f64323169693931693379366f36682e636c6f756466726f6e742e6e65742f67616c6c6572795f696d616765732f66726f6d5f70726f6f662f31303037342f6c617267652f313435353731343038312f747970657363726970742e706e67.png"></div>
+                                <div class="col-xs-3 col-sm-2 col-md-2 skill-icon"><img class="img-responsive" src="img/skills/mysql_PNG23.png"></div>
                             </div>
                         </div>
                     </div>
